<resources>
    <string name="app_name" translatable="false">ExHoangHH</string>
    <string name="imageview_content_description_logo">LOGO</string>
    <string name="edittext_hint_password">Password</string>
    <string name="button_text_login">Login</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="edittext_hint_phone_or_email">Phone or email</string>
    <string name="textview_text_calculator">Calculator</string>
    <string name="textview_text_term_1">* Term 1</string>
    <string name="edittext_hint_team_1">Term 1</string>
    <string name="textview_text_term_2">* Term 2</string>
    <string name="edittext_hint_team_2">Term 2</string>
    <string name="textview_text_operations">Operations</string>
    <string name="textview_text_result">Result</string>
    <string name="textview_text_0">0</string>
    <string name="imageview_content_description_blue_bar">Blue bar</string>
    <string name="textview_text_information">Information</string>
    <string name="textview_text_full_name">* Full name</string>
    <string name="edittext_hint_name_must_be_3_characters"><![CDATA[Name must be >= 3 characters]]></string>
    <string name="textview_text_national_id">* National ID</string>
    <string name="edittext_hint_must_be_exactly_9_digits">Must be exactly 9 digits</string>
    <string name="textview_text_degree">Degree</string>
    <string name="imageview_content_description_degree">DEGREE</string>
    <string name="radiobutton_text_vocational">Vocational</string>
    <string name="radiobutton_text_associate">Associate</string>
    <string name="radiobutton_text_bachelor">Bachelor</string>
    <string name="imageview_content_description_hobbies">Hobbies</string>
    <string name="textview_text_hobbies">Hobbies</string>
    <string name="checkbox_text_reading_news">Reading news</string>
    <string name="checkbox_text_reading_books">Reading books</string>
    <string name="checkbox_text_reading_code">Reading code</string>
    <string name="textview_text_additional_information">Additional Information</string>
    <string name="edittext_hint_enter_additional_information">Enter additional information</string>
    <string name="button_text_submit">SUBMIT</string>
    <string name="imageview_content_description_plus">Plus</string>
    <string name="imageview_content_description_minus">Minus</string>
    <string name="imageview_content_description_multiply">Multiply</string>
    <string name="imageview_content_description_divide">Divide</string>
    <string name="imagebutton_content_description_unseen">Unseen</string>
    <string name="imagebutton_content_description_delete">Delete</string>
    <string name="textview_error_result">ERROR</string>
    <string name="imageview_content_description_back">Back</string>
    <string name="imageview_content_description_avatar">Avatar</string>
    <string name="textview_text_example_gmail_com">Example@gmail.com</string>
    <string name="textview_text_username_is_an_email_address">Username is an email address</string>
    <string name="textview_text_password_8_characters"><![CDATA[Password >=8 characters]]></string>
    <string name="text_email">email</string>
    <string name="textview_text_number_can_t_divide_0">Number can’t divide 0</string>
    <string name="imageview_content_description_delete">Delete</string>
    <string name="textview_text_full_name_required">Full name required</string>
    <string name="textview_text_national_id_required">National ID required</string>
    <string name="textview_text_additional_information_100_character">Additional information >= 100 character</string>
    <string name="imageview_content_description_delete_fullname">Delete FullName</string>
    <string name="imageview_content_description_delete_national_id">Delete National ID</string>
    <string name="imageview_content_description_delete_additional_information">Delete Additional Information</string>
    <string name="imageview_content_description_done">DONE</string>
    <string name="imageview_content_description_flag">FLAG</string>
    <string name="language_position_key">language_position</string>
    <string name="user_preferences_key">UserPreferences</string>
    <string name="language_item_english">English</string>
    <string name="language_item_spainish">Spainish</string>
    <string name="language_item_vietnamese">Vietnamese</string>
    <string name="language_item_french">French</string>
    <string name="language_item_hindi">Hindi</string>
    <string name="language_item_german">German</string>
    <string name="language_item_portuguese">Portuguese</string>
    <string name="language_item_italian">Italian</string>
    <string name="language_item_arabic">Arabic</string>
    <string name="language_item_japanese">Japanese</string>
    <string name="language_item_korean">Korean</string>
    <string name="language_item_south_afrikaans">Afrikaans</string>
    <string name="language_item_hebrew">Hebrew</string>
    <string name="language_item_hausa">Hausa</string>
    <string name="language_item_chinese">Chinese</string>
    <string name="language_item_turkish">Turkish</string>
    <string name="language_item_bahasa_indonesia">Bahasa Indonesia</string>
    <string name="language_item_dutch">Dutch</string>
    <string name="language_item_russian">Russian</string>
    <string name="language_item_polish">Polish</string>
    <string name="language">Language</string>
    <string name="imageview_content_description_crown">CROWN</string>
    <string name="imageview_content_description_setting">SETTING</string>
    <string name="imageview_content_description_question">QUESTION</string>
    <string name="textview_text_previous_text">Previous text</string>
    <string name="imageview_content_description_pen">PEN</string>
    <string name="imageview_content_description_heart">HEART</string>
    <string name="imageview_content_description_image">IMAGE</string>
    <string name="imageview_content_description_home">HOME</string>
    <string name="textview_text_home">Home</string>
    <string name="imageview_content_description_draw_text">DRAW TEXT</string>
    <string name="textview_text_draw_text">Draw Text</string>
    <string name="imageview_content_description_draw">DRAW</string>
    <string name="textview_text_draw">Draw</string>
    <string name="imageview_content_description_mine">MINE</string>
    <string name="textview_text_mine">Mine</string>
    <string name="textview_text_draw_anime">Draw Anime</string>
    <string name="imageview_content_description_paper">PAPER</string>
    <string name="imageview_content_description_pencil">PENCIL</string>
    <string name="textview_text_my_album">My Album</string>
    <string name="textview_text_favourite">Favourite</string>
    <string name="textview_text_draw_now">Draw now!</string>
    <string name="imageview_content_description_yellow_bar">YELLOW BAR</string>
    <string name="imageview_content_description_permissions">PERMISSIONS</string>
    <string name="textview_text_permission">Permission</string>
    <string name="textview_text_allow_necessary_permissions_for_full_functionality_your_data_stays_private">Allow necessary permissions for full functionality. Your data stays private.</string>
    <string name="textview_text_location">Location</string>
    <string name="textview_text_permission_is_not_allowed">Permission is not allowed</string>
    <string name="textview_text_permission_is_allowed">Permission is allowed</string>
    <string name="imageview_content_description_company">COMPANY</string>
    <string name="textview_text_asian_mobile_company">Asian Mobile Company</string>
    <string name="imageview_content_description_location">LOCATION</string>
    <string name="imageview_content_description_camera">CAMERA</string>
    <string name="imageview_content_description_person">PERSON</string>
    <string name="imageview_content_description_police">POLICE</string>
    <string name="imageview_content_description_parking">PARKING</string>
    <string name="toast_text_permission_already_granted">Permission already granted</string>
    <string name="toast_text_gps_permission_denied">GPS permission denied</string>
    <string name="toast_text_gps_disabled">GPS disabled</string>
    <string name="notification_content_title_tracking_location">Tracking location</string>
    <string name="notification_channel_name_gps_tracking">GPS Tracking</string>
    <string name="imageview_content_description_image_download">IMAGE DOWNLOAD</string>
    <string name="textview_text_download">Download</string>
    <string name="imageview_content_description_download_icon">DOWNLOAD ICON</string>
    <string name="imageview_content_description_success">SUCCESS</string>
    <string name="textview_text_downloaded_successfully">Downloaded successfully</string>
    <string name="textview_text_download_failed">Download failed</string>
    <string name="textview_text_try_again">Try Again</string>
    <string name="text_progress">%1$d %%</string>
    <string name="textview_text_user_name">User name</string>
    <string name="textview_text_user_age">User age</string>
    <string name="textview_text_add_user">+ Add user</string>
    <string name="imageview_content_description_delete_all">DELETE ALL</string>
    <string name="textview_text_delete_all">Delete all</string>
    <string name="imageview_content_description_user">USER</string>
    <string name="textview_text_click_the_button_to_display_the_full_list_of_users">Click the button to display the full list of users.</string>
    <string name="imageview_content_description_show_all">SHOW ALL</string>
    <string name="textview_text_show_all">Show all</string>
    <string name="textview_text_delete">Delete</string>
    <string name="textview_text_cancel">Cancel</string>
    <string name="textview_text_are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
    <string name="textview_text_are_you_sure_you_want_to_delete_all">Are you sure you want to delete all %1$d users?</string>
    <string name="textview_text_users">users?</string>
    <string name="toast_text_please_enter_all_data">Please enter all data...</string>
    <string name="toast_text_user_has_been_added">User has been added.</string>
    <string name="textview_text_years_old">%1$s years old</string>
    <string name="imageview_content_description_bottom_bar">BOTTOM BAR</string>
    <string name="textview_text_da_nang">ĐÀ NẴNG</string>
    <string name="textview_text__21">21°</string>
    <string name="textview_text_partly_cloudy">Partly Cloudy</string>
    <string name="textview_text_temperature">Temperature</string>
    <string name="textview_text_rain">Rain</string>
    <string name="textview_text_wintry_mix">Wintry mix</string>
    <string name="textview_text_snow">Snow</string>
    <string name="textview_text_number_mm">%1$.1f mm</string>
    <string name="textview_text_total_in_the_past_24_hours">Total in the past 24 hours</string>
    <string name="textview_text_high_29_low_15">H:29° L:15°</string>
    <string name="imageview_content_description_weather">WEATHER</string>
    <string name="textview_text_number_temperature">%1$.1f°</string>
    <string name="textview_text_hour">%1$02d:00</string>
    <string name="drawtext_text_hour">%1$02d</string>
    <string name="text_0_mm">0 mm</string>
    <string name="text_level_rain">%1$.2f</string>
    <string name="textview_text_all">ALL</string>
    <string name="textview_text_favorite">FAVORITE</string>
    <string name="imageview_content_description_app">APP</string>
    <string name="textview_text_your_hodername">Your hodername</string>
    <string name="imageview_content_description_favorite">FAVORITE</string>
    <string name="app_item_text_app_store">App Store</string>
    <string name="textview_text_camera">Camera</string>
    <string name="imageview_content_description_gallery">GALLERY</string>
    <string name="textview_text_gallery">Gallery</string>
</resources>