<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="312dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_confirm_delete">

    <ImageView
        android:id="@+id/ivCamera"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/imageview_content_description_camera"
        android:src="@drawable/ic_pick_camera"
        app:layout_constraintBottom_toTopOf="@id/ivGallery"
        app:layout_constraintEnd_toStartOf="@id/tvCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/textview_text_camera"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivCamera"
        app:layout_constraintStart_toEndOf="@id/ivCamera"
        app:layout_constraintTop_toTopOf="@id/ivCamera" />

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/imageview_content_description_gallery"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvGallery"
        app:layout_constraintStart_toStartOf="@id/ivCamera"
        app:layout_constraintTop_toBottomOf="@id/ivCamera" />

    <TextView
        android:id="@+id/tvGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/textview_text_gallery"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivGallery"
        app:layout_constraintStart_toEndOf="@id/ivGallery"
        app:layout_constraintTop_toTopOf="@id/ivGallery" />
</androidx.constraintlayout.widget.ConstraintLayout>
